--- a/gcnc/package.json
+++ b/gcnc/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.21",
 		"svelte": "^3.54.0",
