--- a/gcnc/package.json
+++ b/gcnc/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.15.7",
+		"@vite-pwa/sveltekit": "^0.2.1",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.23",
 		"svelte": "^3.58.0",
